// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders correctly with tooltip 1`] = `
<DocumentFragment>
  .cache-1t2d2zh-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

<div
    style="width: 100px;"
  >
    <div
      class="cache-1t2d2zh-StyledText e1tg3t120"
    >
      This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </div>
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="body" 1`] = `
<DocumentFragment>
  .cache-14c0sxk-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-14c0sxk-StyledText e1tg3t120"
  >
    body
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmall" 1`] = `
<DocumentFragment>
  .cache-1cfigws-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1cfigws-StyledText e1tg3t120"
  >
    bodySmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStrong" 1`] = `
<DocumentFragment>
  .cache-1xol0ra-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1xol0ra-StyledText e1tg3t120"
  >
    bodySmallStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodySmallStronger" 1`] = `
<DocumentFragment>
  .cache-vwcraw-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-vwcraw-StyledText e1tg3t120"
  >
    bodySmallStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStrong" 1`] = `
<DocumentFragment>
  .cache-rcs65d-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-rcs65d-StyledText e1tg3t120"
  >
    bodyStrong
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="bodyStronger" 1`] = `
<DocumentFragment>
  .cache-1by8os3-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1by8os3-StyledText e1tg3t120"
  >
    bodyStronger
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="caption" 1`] = `
<DocumentFragment>
  .cache-91iawn-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-91iawn-StyledText e1tg3t120"
  >
    caption
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="captionSmall" 1`] = `
<DocumentFragment>
  .cache-cmay9f-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 10px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-cmay9f-StyledText e1tg3t120"
  >
    captionSmall
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="heading" 1`] = `
<DocumentFragment>
  .cache-1lbkql4-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1lbkql4-StyledText e1tg3t120"
  >
    heading
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingLarge" 1`] = `
<DocumentFragment>
  .cache-kibgr9-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 35px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 48px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-kibgr9-StyledText e1tg3t120"
  >
    headingLarge
  </div>
</DocumentFragment>
`;

exports[`Text renders correctly with type="headingSmall" 1`] = `
<DocumentFragment>
  .cache-1h3bddk-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 21px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1h3bddk-StyledText e1tg3t120"
  >
    headingSmall
  </div>
</DocumentFragment>
`;

exports[`Text with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-14c0sxk-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1lbkql4-StyledText {
  margin: 0;
  color: #4a4f62;
  font-size: 25px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 32px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-14c0sxk-StyledText e1tg3t120"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="cache-1lbkql4-StyledText e1tg3t120"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </div>
</DocumentFragment>
`;

exports[`Text with prominence stronger on non neutral 1`] = `
<DocumentFragment>
  .cache-1jw26dq-StyledText {
  margin: 0;
  color: #a6102d;
  font-size: 16px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-1jw26dq-StyledText e1tg3t120"
  >
    Lorem Ipsum
  </div>
</DocumentFragment>
`;
